@@ -1,24 +1,30 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0">
+
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.example</groupId>
-    <artifactId>MobileTest</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <groupId>com.myStarter</groupId>
+    <artifactId>gluonMobile</artifactId>
+    <version>1.0.0</version>
 
     <properties>
-        <maven.compiler.source>17</maven.compiler.source>
-        <maven.compiler.target>17</maven.compiler.target>
+
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <javafx.version>17.0.13</javafx.version>
-        <main.class>com.androidfx.App</main.class>
+
+        <java.version>23</java.version>
+        <javafx.version>25</javafx.version>
+        <gluonfx.version>1.0.25</gluonfx.version>
+
+        <main.class>
+            com.androidfx.App
+        </main.class>
+
         <gluonfx.target>host</gluonfx.target>
-        <gluonfx.maven.plugin.version>1.0.27</gluonfx.maven.plugin.version>
-        <javafx.maven.plugin.version>0.0.8</javafx.maven.plugin.version>
+
+        <graalvm>${env.JAVA_HOME}</graalvm>
     </properties>
+
     <dependencies>
+
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-controls</artifactId>
@@ -30,38 +36,82 @@
             <version>${javafx.version}</version>
         </dependency>
     </dependencies>
+
     <build>
+
         <plugins>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+
+                <version>3.14.1</version>
+
+                <configuration>
+                    <release>${java.version}</release>
+                </configuration>
+            </plugin>
 
             <plugin>
                 <groupId>org.openjfx</groupId>
                 <artifactId>javafx-maven-plugin</artifactId>
-                <version>${javafx.maven.plugin.version}</version>
+
+                <version>0.0.8</version>
+
                 <configuration>
                     <mainClass>${main.class}</mainClass>
-                    <options>
-                        <option>--enable-native-access=javafx.graphics</option>
-                    </options>
                 </configuration>
             </plugin>
 
             <plugin>
                 <groupId>com.gluonhq</groupId>
                 <artifactId>gluonfx-maven-plugin</artifactId>
-                <version>${gluonfx.maven.plugin.version}</version>
+
+                <version>${gluonfx.version}</version>
+
                 <configuration>
+
+                    <mainClass>
+                        ${main.class}
+                    </mainClass>
                     <target>${gluonfx.target}</target>
-                    <mainClass>${main.class}</mainClass>
+                    <nativeImageArgs>
+                        <arg>-H:+UnlockExperimentalVMOptions</arg>
+                    </nativeImageArgs>
+                    <runtimeArgs>
+                        <arg>--release 23</arg>
+                        <arg>-H:+UnlockExperimentalVMOptions</arg>
+                    </runtimeArgs>
                 </configuration>
             </plugin>
+
         </plugins>
+
     </build>
+
     <profiles>
+
         <profile>
+
             <id>android</id>
+
             <properties>
                 <gluonfx.target>android</gluonfx.target>
             </properties>
+
         </profile>
+
+        <profile>
+
+            <id>desktop</id>
+
+            <properties>
+                <gluonfx.target>host</gluonfx.target>
+                <graalvm>${env.GRAALVM_HOME}</graalvm>
+            </properties>
+
+        </profile>
+
     </profiles>
+
 </project>
